fixed the overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,12 @@
   font-family: "poppins";
   scroll-behavior: smooth;
   /* overflow: hidden; */
+  margin: 0;
+  padding: 0;
 }
 html,body{
   background: radial-gradient(125% 125% at 50% 10%, #000000 30%, #4b0082 70%, #ac97bb 100%);
+overflow-x: hidden;
 
 }
 
